<resources>
    <string name="app_name">Recycleview</string>
    <string name="addNew">add new data</string>
    <string name="add_new">Add New</string>
    <string name="name">Name</string>
    <string name="enter_the_username">Enter the username</string>
    <string name="phone_no">Phone No.</string>
    <string name="enter_the_phone_no">enter the phone no.</string>
    <string name="add">Add</string>
    <string name="hii_android">Hii Android</string>
    <string name="phoneNo">Phone No</string>
    <string name="update_txt">Update</string>
    <string name="updateBtn">Update</string>
</resources>